fix: updated l-site-container to use padding instead of margin and footer's text alignment

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -23,16 +23,18 @@ body {
   position: relative;
 
   &:after {
-    content: ' ';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    opacity: 0.1;
-    background-image: url("/assets/mobile/image-host.jpg");
-    background-repeat: no-repeat;
+    @include breakpoint-down(small) {
+      content: ' ';
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      opacity: 0.1;
+      background-image: url("/assets/mobile/image-host.jpg");
+      background-repeat: no-repeat;
+    }
   }
 
   @include breakpoint-up(medium) {
@@ -80,6 +82,7 @@ body {
 footer {
   margin-top: 1.5rem;
   font-size: rem(13px);
+  text-align: center;
 
   &>p>a {
     color: $green;
