--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -1,7 +1,6 @@
 .l- {
   &site-container {
-    margin: 0 6.4% 0 6.4%;
-    padding-top: rem(62px);
+    padding: rem(62px) 6.4% 0 6.4%;
   }
 
   &text {
